--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "atob": "^2.0.3",
+    "d3-bar": "^1.8.0",
     "d3-circle": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.9"
+    "react-scripts": "1.0.9",
+    "react-weather": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
