--- a/firmware_arduino/platformio.ini
+++ b/firmware_arduino/platformio.ini
@@ -8,11 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:pro8MHzatmega328]
+[env:megaatmega2560]
 platform = atmelavr
-board = pro8MHzatmega328
+board = megaatmega2560
 framework = arduino
 lib_deps=
-  DMD2
 ;https://github.com/matthijskooijman/arduino-lmic
-  https://github.com/sabas1080/arduino-lmic
+  https://github.com/wero1414/arduino-lmic
+  https://github.com/sabas1080/CayenneLPP
+  SparkFun MPL3115A2 Altitude and Pressure Sensor Br
+  SparkFun HTU21D Humidity and Temperature Sensor Br
